--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-﻿<!DOCTYPE html><html lang="ja"><head>  <meta charset="utf-8">  <meta http-equiv="content-type" content="text/html">  <meta http-equiv="content-style-type" content="text/css">  <link rel="stylesheet" type="text/css" href="css/style.css">  <title>アイドルタイムプリパラ</title></head><body>  <div class="bg"></div>  <div class="content">    <div class="logo"></div>    <div class="character"></div>    <div class="bgrar"></div>  </div>  <div class="box">    <div class="Information">      <table>        <tr><td class="info1">原作:</td><td class="info2">タカラトミーアーツ、シンソフィア</td></tr>        <tr><td clsss="info1">監督:</td><td class="info2">　森脇真琴</td></tr>        <tr><td class="info1">アニメーション制作:</td><td class="info2">　タツノコプロ、A&G</td></tr>      </table>    </div>      <div class="textbox_friends">        <p class="textbox_mi"></p>        <p class="textbox_bou"></p>        <p class="textbox_nn"></p>        <p class="textbox_na"></p>        <p class="textbox_to"></p>      </div>  </div></body></html>
+﻿<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="content-type" content="text/html">
+  <meta http-equiv="content-style-type" content="text/css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>アイドルタイムプリパラ</title>
+</head>
+<body>
+  <div class="bg"></div>
+  <div class="content">
+    <div class="logo"></div>
+    <div class="character"></div>
+    <div class="bgrar"></div>
+  </div>
+  <div class="box">
+    <div class="Information">
+      <table>
+        <tr><td class="info1">原作:</td><td class="info2">タカラトミーアーツ、シンソフィア</td></tr>
+        <tr><td clsss="info1">監督:</td><td class="info2">　森脇真琴</td></tr>
+        <tr><td class="info1">アニメーション制作:</td><td class="info2">　タツノコプロ、A&G</td></tr>
+      </table>
+    </div>
+      <div class="textbox_friends">
+        <p class="textbox_mi"></p>
+        <p class="textbox_bou"></p>
+        <p class="textbox_nn"></p>
+        <p class="textbox_na"></p>
+        <p class="textbox_to"></p>
+        <p class="textbox_mo"></p>
+        <p class="textbox_da"></p>
+        <p class="textbox_chi"></p>
+        <p class="textbox_mi2"></p>
+        <p class="textbox_bou2"></p>
+        <p class="textbox_nn2"></p>
+        <p class="textbox_na2s"></p>
+        <p class="textbox_a"></p>
+        <p class="textbox_i"></p>
+        <p class="textbox_do"></p>
+        <p class="textbox_ru"></p>
+      </div>
+  </div>
+</body>
+</html>
