addImage,addAnimation,addDivClass

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <p class="textbox_mo"></p>
         <p class="textbox_da"></p>
         <p class="textbox_chi"></p>
+        <p class="textbox_ex"></p>
         <p class="textbox_mi2"></p>
         <p class="textbox_bou2"></p>
         <p class="textbox_nn2"></p>
