--- a/index.html
+++ b/index.html
@@ -8,39 +8,71 @@
   <title>アイドルタイムプリパラ</title>
 </head>
 <body>
-  <div class="bg"></div>
-  <div class="content">
-    <div class="logo"></div>
-    <div class="character"></div>
-    <div class="bgrar"></div>
-  </div>
-  <div class="box">
-    <div class="Information">
-      <table>
-        <tr><td class="info1">原作:</td><td class="info2">タカラトミーアーツ、シンソフィア</td></tr>
-        <tr><td clsss="info1">監督:</td><td class="info2">　森脇真琴</td></tr>
-        <tr><td class="info1">アニメーション制作:</td><td class="info2">　タツノコプロ、A&G</td></tr>
-      </table>
+  <!--welcomAnimation-->
+  <main id="app">
+  <section id="prologue">
+    <div class="word-1">
+      <div><p>プ</p></div>
+      <div><p>リ</p></div>
+      <div><p>パ</p></div>
+      <div><p>ラ</p></div>
+      <div><p>は</p></div>
     </div>
-      <div class="textbox_friends">
-        <p class="textbox_mi"></p>
-        <p class="textbox_bou"></p>
-        <p class="textbox_nn"></p>
-        <p class="textbox_na"></p>
-        <p class="textbox_to"></p>
-        <p class="textbox_mo"></p>
-        <p class="textbox_da"></p>
-        <p class="textbox_chi"></p>
-        <p class="textbox_ex"></p>
-        <p class="textbox_mi2"></p>
-        <p class="textbox_bou2"></p>
-        <p class="textbox_nn2"></p>
-        <p class="textbox_na2s"></p>
-        <p class="textbox_a"></p>
-        <p class="textbox_i"></p>
-        <p class="textbox_do"></p>
-        <p class="textbox_ru"></p>
+    <div class="word-2">
+      <div><p>す</p></div>
+      <div><p>き</p></div>
+      <div><p>ぷ</p></div>
+      <div><p>り</p></div>
+      <div><p>？</p></div>
+    </div>
+    <div class="connect-line">
+      <div class="line line-1"></div>
+      <div class="line line-2"></div>
+      <div class="point point-1"></div>
+      <div class="point point-2"></div>
+      <div class="point point-3"></div>
+    </div>
+  </section>
+  </main>
+
+
+  <!--maincontents-->
+  <div class="contents">
+  <div class="bg"></div>
+    <div>
+      <div class="logo"></div>
+      <div class="character"></div>
+      <div class="bgrar"></div>
+    </div>
+    <div class="box">
+      <div class="Information">
+        <table>
+          <tr><td class="info1">原作:</td><td class="info2">タカラトミーアーツ、シンソフィア</td></tr>
+          <tr><td clsss="info1">監督:</td><td class="info2">　森脇真琴</td></tr>
+          <tr><td class="info1">アニメーション制作:</td><td class="info2">　タツノコプロ、A&G</td></tr>
+        </table>
       </div>
+        <div class="textbox_friends">
+          <p class="textbox_mi"></p>
+          <p class="textbox_bou"></p>
+          <p class="textbox_nn"></p>
+          <p class="textbox_na"></p>
+          <p class="textbox_to"></p>
+          <p class="textbox_mo"></p>
+          <p class="textbox_da"></p>
+          <p class="textbox_chi"></p>
+          <p class="textbox_ex"></p>
+          <p class="textbox_mi2"></p>
+          <p class="textbox_bou2"></p>
+          <p class="textbox_nn2"></p>
+          <p class="textbox_na2"></p>
+          <p class="textbox_a"></p>
+          <p class="textbox_i"></p>
+          <p class="textbox_do"></p>
+          <p class="textbox_ru"></p>
+          <p class="textbox_ex2"></p>
+        </div>
+    </div>
   </div>
 </body>
 </html>
