--- a/index.html
+++ b/index.html
@@ -10,30 +10,42 @@
 <body>
   <!--welcomAnimation-->
   <main id="app">
-  <section id="prologue">
-    <div class="word-1">
-      <div><p>プ</p></div>
-      <div><p>リ</p></div>
-      <div><p>パ</p></div>
-      <div><p>ラ</p></div>
-      <div><p>は</p></div>
-    </div>
-    <div class="word-2">
-      <div><p>す</p></div>
-      <div><p>き</p></div>
-      <div><p>ぷ</p></div>
-      <div><p>り</p></div>
-      <div><p>？</p></div>
-    </div>
-    <div class="connect-line">
-      <div class="line line-1"></div>
-      <div class="line line-2"></div>
-      <div class="point point-1"></div>
-      <div class="point point-2"></div>
-      <div class="point point-3"></div>
-    </div>
-  </section>
+    <!--welcomAnimation-->
+    <section id="prologue">
+      <div class="word-1">
+        <div><p>プ</p></div>
+        <div><p>リ</p></div>
+        <div><p>パ</p></div>
+        <div><p>ラ</p></div>
+        <div><p>は</p></div>
+      </div>
+      <div class="word-2">
+        <div><p>す</p></div>
+        <div><p>き</p></div>
+        <div><p>ぷ</p></div>
+        <div><p>り</p></div>
+        <div><p>？</p></div>
+      </div>
+      <div class="connect-line">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="point point-1"></div>
+        <div class="point point-2"></div>
+        <div class="point point-3"></div>
+      </div>
+    </section>
   </main>
+  <section id="second">
+    <div id="screen">
+      <section class="images">
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+      </section>
+    </div>
+    <section class="paint"></section>
+  </section>
 
 
   <!--maincontents-->
